text align fix

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -101,6 +101,7 @@
   }
   .hero p {
     margin-top: 20px;
+    text-align: center;
   }
   #weatherimg {
     padding-top: 30px;
